--- a/src/app/components/single-project-comments/single-project-comments.component.html
+++ b/src/app/components/single-project-comments/single-project-comments.component.html
@@ -1,21 +1,22 @@
-<div class="list comments">
-  <div class="item" *ngFor="let comment of comments">
-    <div class="user">{{userService.userToName(comment.user)}}</div>
-    <div class="createdDateTime">{{formService.formatDateTime(comment.createdDateTime)}}</div>
-    <div class="modifiedDateTime">{{formService.formatDateTime(comment.modifiedDateTime)}}</div>
-    <div class="content">{{comment.content}}</div>
-    <div class="icon" (click)="editComment(comment)"><img src="assets/images/icon-edit.svg" alt=""></div>
-    <div class="icon" (click)="removeComment(comment)"><img src="assets/images/icon-delete.svg" alt=""></div>
+<ng-container *ngIf="!newProject;else newProjectContainer">
+  <div class="list comments">
+    <div class="item" *ngFor="let comment of comments">
+      <div class="user">{{userService.userToName(comment.user)}}</div>
+      <div class="createdDateTime">{{formService.formatDateTime(comment.createdDateTime)}}</div>
+      <div class="modifiedDateTime">{{formService.formatDateTime(comment.modifiedDateTime)}}</div>
+      <div class="content">{{comment.content}}</div>
+      <div class="icon" (click)="editComment(comment)"><img src="assets/images/icon-edit.svg" alt=""></div>
+      <div class="icon" (click)="removeComment(comment)"><img src="assets/images/icon-delete.svg" alt=""></div>
+    </div>
   </div>
-</div>
-
-<form [formGroup]="commentForm" (ngSubmit)="onSubmit()">
-  <div class="inputGroup">
-    <label for="content">content</label>
-    <input type="text" name="content" formControlName="content">
-    <p *ngIf="formService.checkInputField(commentForm, 'content', submitted)" class="error">!</p>
-  </div>
-
+  
+  <form [formGroup]="commentForm" (ngSubmit)="onSubmit()">
+    <div class="inputGroup">
+      <label for="content">content</label>
+      <input type="text" name="content" formControlName="content">
+      <p *ngIf="formService.checkInputField(commentForm, 'content', submitted)" class="error">!</p>
+    </div>
+  
     <div class="inputGroup right">
       <ng-container *ngIf="editState; else elseTemplate">
         <input type="submit" value="edit comment">
@@ -24,5 +25,8 @@
         <input type="submit" value="add comment">
       </ng-template>
     </div>
-  
-</form>
+  </form>
+</ng-container>
+<ng-template #newProjectContainer>
+  Opmerkingen kunnen niet toegevoegd worden op nieuwe projecten, gelieve eerst op te slaan.
+</ng-template>
