--- a/src/app/components/single-project/single-project.component.scss
+++ b/src/app/components/single-project/single-project.component.scss
@@ -1,3 +1,7 @@
 @import 'variables';
 @import 'forms';
-@import 'status-colors'
+@import 'status-colors';
+
+app-single-project-comments {
+    width: 100%;
+}
