--- a/src/app/components/mail-project/mail-project.component.html
+++ b/src/app/components/mail-project/mail-project.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="mailForm" (ngSubmit)="onSubmit()">
+<form *ngIf="auth.isAdmin()" [formGroup]="mailForm" (ngSubmit)="onSubmit()">
   <div class="inputGroup">
     <div class="left controls">
       <div (click)="goBack()"><img src="/assets/images/icon-back.svg" alt=""></div>
