--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -136,7 +136,19 @@
 
             <div class="commentGiven">
                 <ng-container *ngIf="project.comments.length > 0">
-                    <img src="/assets/images/icon-comment.svg" alt="" (mouseenter)="showComment($event, project.comments)" (mouseleave)="hideComment()" (click)="showComment($event, project.comments)">
+                    <div class="commentContainer">
+                        <img src="/assets/images/icon-comment.svg" alt="" (mouseenter)="showComment(project._id)" (mouseleave)="hideComment()"
+                            (click)="showComment(project._id)">
+                        <div class="hoverComment" *ngIf="currentHoverComment === project._id">
+                            <div class="list comments">
+                                <div class="comment" *ngFor="let comment of project.comments | reverse">
+                                    <div class="user">{{userService.userToName(comment.user)}}</div>
+                                    <div class="modifiedDateTime">{{formService.formatDateTime(comment.modifiedDateTime)}}</div>
+                                    <div class="content" [innerHTML]="formService.newlineToBr(comment.content)"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </ng-container>
             </div>
         </div>
@@ -162,13 +174,3 @@
         <button (click)="cancelBatchMode()">Annuleer</button>
     </form>
 </infiltro-modal>
-
-<div class="hoverComment" *ngIf="hoverComment" [style.top]="hoverY + 'px'" [style.left]="hoverX + 'px'">
-    <div class="list comments">
-        <div class="comment" *ngFor="let comment of hoverComment">
-            <div class="user">{{userService.userToName(comment.user)}}</div>
-            <div class="modifiedDateTime">{{formService.formatDateTime(comment.modifiedDateTime)}}</div>
-            <div class="content" [innerHTML]="formService.newlineToBr(comment.content)"></div>
-        </div>
-  </div>
-</div>
