--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -265,6 +265,94 @@
 
     .commentGiven {
         grid-column-start: 7;
+
+        .commentContainer {
+            display: flex;
+            position: relative;
+
+            .hoverComment {
+                min-width: 320px;
+                padding: 10px;
+                background: white;
+                border: 1px solid $infiltro-red;
+                position: absolute;
+                transform: translate(calc(-100% + 15px), calc(-100% - 10px));
+                top: 0;
+
+                &:after {
+                    content: '';
+                    display: block;
+                    width: 0;
+                    height: 0;
+                    position: absolute;
+                    bottom: -5px;
+                    right: 2px;
+                    -moz-transform: scale(.9999);
+                    border-left: 5px solid transparent;
+                    border-right: 5px solid transparent;
+                    border-top: 5px solid $infiltro-red;
+                }
+
+                .list.comments {
+                    .comment {
+                        display: grid;
+                        grid-template-columns: 1fr 50px 15px;
+                        grid-template-rows: 15px 1fr;
+                        grid-gap: 5px;
+                        padding: 5px;
+                        margin: 5px 0;
+                        border: 1px solid $infiltro-border-grey;
+                        font-size: 12px;
+
+                        .user {
+                            grid-column-start: 1;
+                            grid-row-start: 1;
+                            font-weight: bold;
+                        }
+
+                        // .createdDateTime {
+                        //     grid-column-start: span 2;
+                        //     grid-row-start: 2;
+                        // }
+
+                        .modifiedDateTime {
+                            grid-column-start: span 2;
+                            grid-row-start: 2;
+                            display: flex;
+                            align-items: flex-end;
+                            font-size: 8px;
+                            color: $infiltro-grey;
+                            text-align: right;
+                        }
+
+                        .content {
+                            grid-column-start: 1;
+                            grid-row-start: 2;
+                        }
+
+                        .icon {
+                            img {
+                                width: 15px;
+                            }
+
+                            &.edit {
+                                grid-column-start: 2;
+                                grid-row-start: 1;
+
+                                display: flex;
+                                justify-content: flex-end;
+                                padding-right: 3px;
+                            }
+
+                            &.delete {
+                                grid-column-start: 3;
+                                grid-row-start: 1;
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
 }
 
@@ -293,87 +381,5 @@
 
     .project {
         grid-template-columns: 15% 1fr 18% 24% 3.5% 3.5% 3.5%;
-    }
-}
-
-.hoverComment {
-    min-width: 320px;
-    padding: 10px;
-    background: white;
-    border: 1px solid $infiltro-red;
-    position: absolute;
-    transform: translate(-100%, calc(-100% - 5px));
-
-    &:after {
-        content: '';
-        display: block;
-        width: 0;
-        height: 0;
-        position: absolute;
-        bottom: -5px;
-        right: 2px;
-        -moz-transform: scale(.9999);
-        border-left: 5px solid transparent;
-        border-right: 5px solid transparent;
-        border-top: 5px solid $infiltro-red;
-    }
-
-    .list.comments {
-        .comment {
-            display: grid;
-            grid-template-columns: 1fr 50px 15px;
-            grid-template-rows: 15px 1fr;
-            grid-gap: 5px;
-            padding: 5px;
-            margin: 5px 0;
-            border: 1px solid $infiltro-border-grey;
-            font-size: 12px;
-
-            .user {
-                grid-column-start: 1;
-                grid-row-start: 1;
-                font-weight: bold;
-            }
-
-            // .createdDateTime {
-            //     grid-column-start: span 2;
-            //     grid-row-start: 2;
-            // }
-
-            .modifiedDateTime {
-                grid-column-start: span 2;
-                grid-row-start: 2;
-                display: flex;
-                align-items: flex-end;
-                font-size: 8px;
-                color: $infiltro-grey;
-                text-align: right;
-            }
-
-            .content {
-                grid-column-start: 1;
-                grid-row-start: 2;
-            }
-
-            .icon {
-                img {
-                    width: 15px;
-                }
-
-                &.edit {
-                    grid-column-start: 2;
-                    grid-row-start: 1;
-
-                    display: flex;
-                    justify-content: flex-end;
-                    padding-right: 3px;
-                }
-
-                &.delete {
-                    grid-column-start: 3;
-                    grid-row-start: 1;
-                }
-            }
-        }
     }
 }
