remove delete button for own user and company

--- a/src/app/components/admin-companies/admin-companies.component.html
+++ b/src/app/components/admin-companies/admin-companies.component.html
@@ -9,7 +9,7 @@
       </ng-container>
     </div>
     <div class="icon" (click)="editCompany(company)"><img src="assets/images/icon-edit.svg" alt=""></div>
-    <div class="icon" (click)="removeCompany(company)"><img src="assets/images/icon-delete.svg" alt=""></div>
+    <div class="icon" *ngIf="company._id !== auth.getUserDetails().company" (click)="removeCompany(company)"><img src="assets/images/icon-delete.svg" alt=""></div>
   </div>
 </div>
 
