--- a/src/app/components/admin-user/admin-user.component.html
+++ b/src/app/components/admin-user/admin-user.component.html
@@ -5,7 +5,7 @@
     <div>{{companyService.companyName(user.company)}}</div>
     <div>{{userService.roleName(user.role)}}</div>
     <div class="icon" (click)="editUser(user)"><img src="assets/images/icon-edit.svg" alt=""></div>
-    <div class="icon" (click)="removeUser(user)"><img src="assets/images/icon-delete.svg" alt=""></div>
+    <div class="icon" *ngIf="user._id !== auth.getUserDetails().id" (click)="removeUser(user)"><img src="assets/images/icon-delete.svg" alt=""></div>
   </div>
 </div>
 
