--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -3,7 +3,7 @@
       <div class="projectRow space-between">
         <div class="left controls">
           <div (click)="goToOverview()"><img src="/assets/images/icon-back.svg" alt=""></div>
-          <div (click)="onSubmit()"><img src="/assets/images/icon-save.svg" alt=""></div>
+          <div (click)="onSubmit()"><img [src]="projectForm.touched ? '/assets/images/icon-save.svg' : '/assets/images/icon-save-disabled.svg'" alt=""></div>
           <div *ngIf="projectId" (click)="removeProject()"><img src="/assets/images/icon-delete.svg" alt=""></div>
           <div (click)="openProjectMail()"><img src="/assets/images/icon-mail.svg" alt=""></div>
           <div *ngIf="auth.isAdmin" (click)="duplicateProject()"><img src="/assets/images/icon-duplicate.svg" alt=""></div>
